fix(paper-shelf): fix title clipping and button overflow on mobile

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -122,8 +122,8 @@
         .btn, .btn-disabled {
           margin-top: 10px;
           margin-bottom: 10px;
-          margin-left: 2px;
-          margin-right: 2px;
+          margin-left: 6px;
+          margin-right: 6px;
           padding: 0 8px;
           line-height: 28px;
           height: 35px;
@@ -158,8 +158,8 @@
         }
 
         .btn, .btn-disabled {
-          margin-top: 10px;
-          margin-bottom: 10px;
+          margin-top: 4px;
+          margin-bottom: 4px;
           margin-left: 2px;
           margin-right: 2px;
           padding: 0 8px;
